salesforce/force-app/main/default/objects/Campaign/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Lauren's event taxonomy for marketing ROI tracking. Separate from Type__c which covers all marketing activities.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
            <value>
                <fullName>Field Event</fullName>
            </value>
            <value>
                <fullName>Third-Party Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>