salesforce/force-app/main/default/objects/Campaign/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal year attribution for budget vs actual spend reporting. Enables year-over-year event ROI comparison.</description>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY2024</fullName>
            </value>
            <value>
                <fullName>FY2025</fullName>
            </value>
            <value>
                <fullName>FY2026</fullName>
                <default>true</default>
                <label>FY2026</label>
            </value>
            <value>
                <fullName>FY2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>