salesforce/force-app/main/default/objects/Campaign/fields/Projected_Spend__c.field-meta.xml
<CustomField>
    <fullName>Projected_Spend__c</fullName>
    <description>Projected spend for this campaign, distinct from BudgetedCost. Used for pre-event forecasting vs post-event actuals comparison.</description>
    <label>Projected Spend</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>